tests/trybuild/fail.rs
use duration::duration;

const _D: std::time::Duration = duration!("not-a-duration");

fn main() {}
